--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
             </nav>
         </header>
         <div class="personalinfo">
-            <img class="ansh" src="images/ansh11.jpg">
+            <img class="ansh" src="images/ansh12.jpg">
             <p class="name">Mr.Ansh Pokar</p>
             <p class="info1">
                 Hello. I am creative web Designer & Developer Based in Mumbai,Maharashtra. I have
@@ -48,7 +48,7 @@
                 visually stunning and functional digital experiences.<br>With an eye for design aesthetics and technical
                 expertise, I craft unique and<br>engaging websites. Let's collaborate to bring your ideas to life in the
                 digital realm!</p>
-            <a href="images/ansh's CV updated.pdf" download>
+            <a href="images/ansh's cv.pdf" download>
                 <button class="download">Download CV</button>
             </a>
         </div>
