--- a/portfolio.html
+++ b/portfolio.html
@@ -270,6 +270,26 @@
                     <p><a href="mailto:anshjpokar@gmail.com">anshjpokar@gmail.com</a></p>
                 </div>
             </div>
+
+            <div class="location">
+                <div class="location-image">
+                    <img class="location-img" src="images/linkedin.png">
+                </div>
+                <div class="location-info">
+                    <h2><a href="https://www.linkedin.com/in/ansh-pokar-663210312/">linked In</a></h2>
+                    <p><a href="https://www.linkedin.com/in/ansh-pokar-663210312/">ansh-pokar</a></p>
+                </div>
+            </div>
+
+            <div class="location">
+                <div class="location-image">
+                    <img class="location-img" src="images/github.png">
+                </div>
+                <div class="location-info">
+                    <h2><a href="https://github.com/anshpokar">GitHub</a></h2>
+                    <p><a href="https://github.com/anshpokar">anshpokar</a></p>
+                </div>
+            </div>
         </div>
     </section>
 
